2010-11-22 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* ResDoubleGauss classes : check for the TF parameters -> only warning if sigma < 0
	* tag KLFitter-00-03-19

2010-11-18 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* fix in Fitter.cxx for (non-used) b-tagging weighting method
	* tag KLFitter-00-03-18

2010-11-18 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* runKLFitter.c : clean up flags
	* tag KLFitter-00-03-17

2010-11-18 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* Refining comments.
	* tag KLFitter-00-03-16

2010-11-18 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* ResDoubleGauss classes : implement a check for the TF parameters
	* tag KLFitter-00-03-15

2010-11-17 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* DetectorBase : fix compiler warning for unused variable
	* tag KLFitter-00-03-14

2010-11-09 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* minor changes in InterfaceD3PD.cxx, InterfaceD3PD.h: overload ConnectTree
	* tag KLFitter-00-03-13

2010-11-08 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* bugfix in InterfaceD3PD.cxx, InterfaceD3PD.h: MC weight
	* tag KLFitter-00-03-12

2010-11-03 Olaf Nackenhorst <olaf.nackenhorst@phys.uni-goettingen.de>
	
	* add InterfaceD3PD.cxx, InterfaceD3PD.h, InterfaceStructNtup.cxx, InterfaceStructNtup.h: Interfaces for TopInputsD3PD and NIKHEF StructNtuples
	* add runKLFitter_D3PD.c: example file for running on a different ntuple without truth information  
	* tag KLFitter-00-03-11

2010-10-06 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* add flag for the athena comparison (different selection + no SimAnn)
	* add flag for truth selection (default : false)
	* tag KLFitter-00-03-10

2010-10-06 Johannes Erdmann <johannes.erdmann@cern.ch>
	
	* InterfaceGoTopTree.cxx : require IsTopInputs; remove obsolte isolation (was not used anyway)
	* tag KLFitter-00-03-09

2010-10-05 Stefan Guindon <stefan.guindon@cern.ch>
	