@@ -29,7 +29,7 @@ KLFitter::ResDoubleGaussE_3::~ResDoubleGaussE_3()
 }
 
 // --------------------------------------------------------- 
-double KLFitter::ResDoubleGaussE_3::p(double x, double xmeas)
+double KLFitter::ResDoubleGaussE_3::p(double x, double xmeas, bool &good)
 {
   double p1  = fParameters[0] / x + fParameters[1]; 
   double p2 = sqrt( fParameters[2]*fParameters[2] / x + fParameters[3]*fParameters[3] );
@@ -44,7 +44,7 @@ double KLFitter::ResDoubleGaussE_3::p(double x, double xmeas)
   //  double p5 = fParameters.at(8) + x * fParameters.at(9);
 
   // sanity checks for p2, p3 and p5
-  ResDoubleGaussE_1::CheckDoubleGaussianSanity(p2, p3, p5);
+  good = ResDoubleGaussE_1::CheckDoubleGaussianSanity(p2, p3, p5);
 
   double dx = (x - xmeas) / x; 
  
