@@ -23,8 +23,9 @@ KLFitter::ResGauss::~ResGauss()
 }
 
 // --------------------------------------------------------- 
-double KLFitter::ResGauss::p(double x, double xmeas)
+double KLFitter::ResGauss::p(double x, double xmeas, bool &good)
 {
+  good = true;
   return TMath::Gaus(xmeas, x, fParameters.at(0), true); 
 }
 
